<resources>
    <string name="app_name">Tourism Maharashtra</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Select City</string>
    <string name="title_section3">Feedback</string>
    <string name="title_section4">Settings</string>
    <string name="jalgaon">Jalgaon</string>
    <string name="nagpur">Nagpur</string>
    <string name="mumbai">Mumbai</string>
    <string name="nasikh">Nashik</string>
    <string name="aurangabad">Aurangabad</string>
    <string name="pune">Pune</string>
    <string name="ratnagiri">Ratnagiri</string>
    <string name="kolhapur">Kolhapur</string>
    <string name="solapur">Solapur</string>
    <string name="mahabaleshwar">Mahabaleshwar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_jalgaon">Jalgaon</string>
    <string name="manudevi">Manudevi Temple</string>
    <string name="ajanta">Ajanta Caves</string>
    <string name="mumbai_tourist_place">Mumbai Tourist Place</string>
    <string name="elephanta_caves">Elephanta Caves</string>
    <string name="chhatrapati_shivaji_museum">Chhatrapati Shivaji Museum</string>
    <string name="chhatrapati_shivaji_terminus">Chhatrapati Shivaji Terminus</string>
    <string name="review">Review</string>
    <string name="more_photos">More Photos</string>
    <string name="google_map">Google Map</string>
    <string name="how_to_reach">Launch Navigation</string>
    <string name="juhu_beach">Juhu Beach</string>
    <string name="sanjay_gandhi_national_park">Sanjay Gandhi National Park</string>
    <string name="title_activity_mumbai">Mumbai</string>
    <string name="gate_way_of_india">Gate Way Of India</string>
    <string name="title_activity_gandhi__tirth">Gandhi Teerth</string>
    <string name="gandhi_teerth">Gandhi Teerth</string>
    <string name="feedback">Feedback Us</string>
    <string name="report_inaccuracies">Report InAccuracies</string>
    <string name="title_activity_ajanta">Ajanta Caves</string>
    <color name="button_text_color">#3f48cc</color>
    <string name="title_activity_gate_way_of_india">Gate Way Of India</string>
    <string name="title_activity_elephanta_caves">Elephanta Caves</string>
    <string name="title_activity_chhatrapati_shivaji_museum">Chhatrapati Shivaji Museum</string>
    <string name="title_activity_juhu_beach">Juhu Beach</string>
    <string name="title_activity_sanjay_gandhi_national_park">Sanjay Gandhi National park</string>
    <string name="taj_hotel">Taj Mahal Palace</string>
    <string name="title_activity_taj_hotel">Taj Mahal Palace</string>
    <string name="title_activity_manudevi">Manudevi Temple</string>
    <string name="title_activity_chhatrapati_shivaji_terminus">Chhatrapati Shivaji Terminus</string>
    <string name="title_activity_nashik">Nashik</string>
    <string name="trimbakeshwar">Trimbakeshwar</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_trimbakeshwar">Trimbakeshwar</string>
    <string name="pandavleni_caves">Pandavleni Caves</string>
    <string name="title_activity_pandavleni_caves">Pandavleni Caves</string>
    <string name="title_activity_muktidham">Muktidham</string>
    <string name="muktidham">Muktidham</string>
    <string name="title_activity_nagpur">Nagpur</string>
    <string name="deekshabhoomi">Deekshabhoomi</string>
    <string name="dragon_palace">Dragon Palace</string>
    <string name="maharajbagh_zoo">Maharajbagh Zoo</string>
    <string name="tadoba_national_park">Tadoba National Park</string>
    <string name="title_activity_deekshbhoomi">Deekshbhoomi</string>
    <string name="title_activity_deekshabhoomi">Deekshabhoomi</string>
    <string name="title_activity_dragon_palace">Dragon Palace</string>
    <string name="title_activity_tadoba_natioal_park">Tadoba Natioal Park</string>
    <string name="title_activity_tadoba_national_park">Tadoba National Park</string>
    <string name="title_activity_maharaj_bagh_zoo">Maharaj Bagh Zoo</string>
    <string name="visiting_tips">Visiting Tips</string>
    <string name="title_activity_tourist_place_map">Map</string>
    <string name="title_activity_kolhapur">Kolhapur</string>
    <string name="jyotiba_temple">Shree Jyotiba Temple</string>
    <string name="mahalaxmi_temple">Shree Mahalaxmi Mandir</string>
    <string name="panhala_fort">Panhala Fort</string>
    <string name="rankala_lake">Rankala Lake</string>
    <string name="title_activity_jyotiba_temple">Jyotiba Temple</string>
    <string name="title_activity_mahalaxmi">Shree Mahalaxmi Mandir</string>
    <string name="title_activity_panhala_fort">Panhala Fort</string>
    <string name="title_activity_rankala_lake">Rankala Lake</string>
    <string name="title_activity_pune">Pune</string>
    <string name="agakhan_palace">Aga Khan Palace</string>
    <string name="alandi">Alandi</string>
    <string name="dehu">Dehu</string>
    <string name="katraj_zoo">Katraj Zoo</string>
    <string name="kelkar_museum">Kelkar Museum</string>
    <string name="ranjan_gaon">Ranjan Gaon</string>
    <string name="shaniwarwada">Shaniwarwada</string>
    <string name="shivnery">Shivnery</string>
    <string name="title_activity_agakhanpalace">AgaKhan Palace</string>
    <string name="title_activity_alandi">Alandi</string>
    <string name="title_activity_dehu">Dehu</string>
    <string name="title_activity_katrajzoo">Katraj Zoo</string>
    <string name="title_activity_kelkarmuseum">Kelkar Museum</string>
    <string name="title_activity_ranjangaon">Ranjangaon</string>
    <string name="title_activity_shaniwarwada">Shaniwarwada</string>
    <string name="title_activity_shivnery">Shivnery</string>
    <string name="padmalaya">Padmalaya</string>
    <string name="raman_science_center">Raman Science Centre</string>
    <string name="lonavla">Lonavala</string>
    <string name="title_activity_abus">Abus</string>
    <string name="title_activity_ad_chro">AdChro</string>
    <string name="title_activity_padmalya">Padmalaya</string>
    <string name="title_activity_raman_science_center">Raman Science Centre</string>
    <string name="title_activity_lonalva">Lonavala</string>
    <string name="title_activity_displaylistview">Review</string>
    <string name="title_activity_row_layout">Review</string>
    <string name="title_activity_add_info">Add Review</string>
    <string name="title_activity_rlist">Railway</string>

</resources>
