<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MT$PlaceholderFragment"
    android:orientation="horizontal"
    android:background="@drawable/background">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                card_view:cardCornerRadius="1dp"
                android:onClick="jal"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/j"
                        android:layout_gravity="start"
                        android:layout_marginRight="273dp"
                        android:layout_marginEnd="260dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jalgaon"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/jalgaon"
                        android:textColor="@color/button_text_color"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        >
                    </TextView>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                card_view:cardCornerRadius="1dp"
                android:onClick="nagpur"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/n"
                        android:layout_gravity="start"
                        android:layout_marginRight="273dp"
                        android:layout_marginEnd="260dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nagpur"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/nagpur"
                        android:textColor="@color/button_text_color"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">
                    </TextView>
                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_vieww"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                card_view:cardCornerRadius="1dp"
                android:onClick="mumbai"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/m"
                        android:layout_gravity="start"
                        android:layout_marginRight="273dp"
                        android:layout_marginEnd="260dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mumbai"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/mumbai"
                        android:textColor="@color/button_text_color"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        >
                    </TextView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                card_view:cardCornerRadius="1dp"
                android:onClick="nashik"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/n"
                        android:layout_gravity="start"
                        android:layout_marginRight="273dp"
                        android:layout_marginEnd="260dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nasikh"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/nasikh"
                        android:textColor="@color/button_text_color"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">
                    </TextView>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                card_view:cardCornerRadius="1dp"
                android:onClick="pune"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/p"
                        android:layout_gravity="start"
                        android:layout_marginRight="273dp"
                        android:layout_marginEnd="260dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pune"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/pune"
                        android:textColor="@color/button_text_color"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        >
                    </TextView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
   <!--         <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                card_view:cardCornerRadius="1dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/a"
                        android:layout_gravity="start"
                        android:layout_marginRight="273dp"
                        android:layout_marginEnd="260dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aurangabad"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/aurangabad"
                        android:textColor="@color/button_text_color"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">
                    </TextView>

                </RelativeLayout>

            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                card_view:cardCornerRadius="1dp"

                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/r"
                        android:layout_gravity="start"
                        android:layout_marginRight="273dp"
                        android:layout_marginEnd="260dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ratnagiri"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/ratnagiri"
                        android:textColor="@color/button_text_color"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        >
                    </TextView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>           -->
            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                card_view:cardCornerRadius="1dp"
                android:onClick="kolhapur"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/k"
                        android:layout_gravity="start"
                        android:layout_marginRight="273dp"
                        android:layout_marginEnd="260dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kolhapur"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:id="@+id/koalhapur"
                        android:textColor="@color/button_text_color"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        >
                    </TextView>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>










